manifests/networkPolicies/10-GNP-default-policy.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: default-policy
spec:
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name != "kube-system"
  types:
    - Egress
    - Ingress
