manifests/networkPolicies/100-NP-yaobank-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yaobank-ns
  namespace: yaobank
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: guestbook
        - podSelector:
            matchLabels:
              app: customer

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaobank

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaobank

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
        - podSelector:
            matchLabels:
              app: istiod
      ports:
        - port: 15012
          protocol: TCP
