manifests/networkPolicies/GNP-deny-everything.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector: projectcalico.org/name != "kube-system"
  types:
    - Ingress
    - Egress
